@@ -14,9 +14,10 @@ package org.eclipse.ditto.internal.models.signalenrichment;
 
 import static org.eclipse.ditto.base.model.common.ConditionChecker.checkNotNull;
 
-import java.util.Collection;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
@@ -38,6 +39,8 @@ import org.eclipse.ditto.internal.utils.pekko.logging.DittoLoggerFactory;
 import org.eclipse.ditto.internal.utils.pekko.logging.ThreadSafeDittoLogger;
 import org.eclipse.ditto.internal.utils.tracing.DittoTracing;
 import org.eclipse.ditto.internal.utils.tracing.span.SpanOperationName;
+import org.eclipse.ditto.json.JsonArray;
+import org.eclipse.ditto.json.JsonCollectors;
 import org.eclipse.ditto.json.JsonFactory;
 import org.eclipse.ditto.json.JsonFieldSelector;
 import org.eclipse.ditto.json.JsonObject;
@@ -156,43 +159,105 @@ public class DittoCachingSignalEnrichmentFacade implements CachingSignalEnrichme
                 (concernedSignal instanceof ThingEvent) && !(ProtocolAdapter.isLiveSignal(concernedSignal)) ?
                         List.of((ThingEvent<?>) concernedSignal) : List.of();
 
-        // as second step only return what was originally requested as fields:
-        final var cachingParameters =
-                new CachingParameters(jsonFieldSelector, thingEvents, true, 0);
-
-        return doRetrievePartialThing(thingId, dittoHeaders, null, cachingParameters)
-                .thenApply(jsonObject -> applyJsonFieldSelector(jsonObject, jsonFieldSelector));
+        final DittoHeaders signalHeaders = Optional.ofNullable(concernedSignal)
+                .map(Signal::getDittoHeaders)
+                .orElseGet(DittoHeaders::empty);
+        if (jsonFieldSelector != null &&
+                signalHeaders.containsKey(DittoHeaderDefinition.PRE_DEFINED_EXTRA_FIELDS_OBJECT.getKey())
+        ) {
+            return performPreDefinedExtraFieldsOptimization(
+                    thingId, jsonFieldSelector, dittoHeaders, signalHeaders, thingEvents
+            );
+        } else {
+            // as second step only return what was originally requested as fields:
+            final var cachingParameters =
+                    new CachingParameters(jsonFieldSelector, thingEvents, true, 0);
+            return doRetrievePartialThing(thingId, dittoHeaders, null, cachingParameters)
+                    .thenApply(jsonObject -> applyJsonFieldSelector(jsonObject, jsonFieldSelector));
+        }
     }
 
-    /**
-     * Retrieve parts of a thing.
-     *
-     * @param thingId ID of the thing.
-     * @param jsonFieldSelector the selected fields of the thing.
-     * @param dittoHeaders Ditto headers containing authorization information.
-     * @param concernedSignals the Signals which caused that this partial thing retrieval was triggered
-     * (e.g. a {@code ThingEvent})
-     * @param minAcceptableSeqNr minimum sequence number of the concerned signals to not invalidate the cache.
-     * @return future that completes with the parts of a thing or fails with an error.
-     */
-    @SuppressWarnings({"java:S1612", "unused"})
-    public CompletionStage<JsonObject> retrievePartialThing(final EntityId thingId,
+    private CompletionStage<JsonObject> performPreDefinedExtraFieldsOptimization(final ThingId thingId,
             final JsonFieldSelector jsonFieldSelector,
             final DittoHeaders dittoHeaders,
-            final Collection<? extends Signal<?>> concernedSignals,
-            final long minAcceptableSeqNr) {
+            final DittoHeaders signalHeaders,
+            final List<ThingEvent<?>> thingEvents
+    ) {
+        final JsonArray configuredPredefinedExtraFields =
+                JsonArray.of(signalHeaders.get(DittoHeaderDefinition.PRE_DEFINED_EXTRA_FIELDS.getKey()));
+        final Set<JsonPointer> allConfiguredPredefinedExtraFields = configuredPredefinedExtraFields.stream()
+                .filter(JsonValue::isString)
+                .map(JsonValue::asString)
+                .map(JsonPointer::of)
+                .collect(Collectors.toSet());
 
-        final List<ThingEvent<?>> thingEvents = concernedSignals.stream()
-                .filter(signal -> signal instanceof ThingEvent && !Signal.isChannelLive(signal))
-                .map(signal -> (ThingEvent<?>) signal)
-                .collect(Collectors.toList());
+        final JsonObject preDefinedExtraFields =
+                JsonObject.of(signalHeaders.get(DittoHeaderDefinition.PRE_DEFINED_EXTRA_FIELDS_OBJECT.getKey()));
+        final JsonObject filteredPreDefinedExtraFieldsReadGranted =
+                filterPreDefinedExtraReadGrantedObject(jsonFieldSelector, dittoHeaders, signalHeaders,
+                        preDefinedExtraFields);
 
-        // as second step only return what was originally requested as fields:
-        final var cachingParameters =
-                new CachingParameters(jsonFieldSelector, thingEvents, true, minAcceptableSeqNr);
+        final boolean allExtraFieldsPresent =
+                allConfiguredPredefinedExtraFields.containsAll(jsonFieldSelector.getPointers());
+        if (allExtraFieldsPresent) {
+            LOGGER.withCorrelationId(dittoHeaders)
+                    .debug("All asked for extraFields for thing <{}> were present in pre-defined fields, " +
+                            "skipping cache retrieval: <{}>", thingId, jsonFieldSelector);
+            return CompletableFuture.completedStage(filteredPreDefinedExtraFieldsReadGranted);
+        } else {
+            // optimization to only fetch extra fields which were not pre-defined
+            final List<JsonPointer> missingFieldsPointers = new ArrayList<>(jsonFieldSelector.getPointers());
+            missingFieldsPointers.removeAll(allConfiguredPredefinedExtraFields);
+            final JsonFieldSelector missingFieldsSelector = JsonFactory.newFieldSelector(missingFieldsPointers);
+            final var cachingParameters =
+                    new CachingParameters(missingFieldsSelector, thingEvents, true, 0);
 
-        return doRetrievePartialThing(thingId, dittoHeaders, null, cachingParameters)
-                .thenApply(jsonObject -> applyJsonFieldSelector(jsonObject, jsonFieldSelector));
+            LOGGER.withCorrelationId(dittoHeaders)
+                    .debug("Fetching non pre-defined extraFields for thing <{}>: <{}>", thingId, missingFieldsPointers);
+
+            return doRetrievePartialThing(thingId, dittoHeaders, null, cachingParameters)
+                    .thenApply(jsonObject ->
+                            JsonFactory.newObject( // merge
+                                    applyJsonFieldSelector(jsonObject, missingFieldsSelector),
+                                    filteredPreDefinedExtraFieldsReadGranted
+                            )
+                    );
+        }
+    }
+
+    private static JsonObject filterPreDefinedExtraReadGrantedObject(
+            final JsonFieldSelector jsonFieldSelector,
+            final DittoHeaders dittoHeaders,
+            final DittoHeaders signalHeaders,
+            final JsonObject preDefinedExtraFields
+    ) {
+        final JsonObject preDefinedExtraFieldsReadGrant = JsonObject.of(
+                signalHeaders.get(DittoHeaderDefinition.PRE_DEFINED_EXTRA_FIELDS_READ_GRANT_OBJECT.getKey())
+        );
+        final JsonFieldSelector grantedReadJsonFieldSelector = filterAskedForFieldSelectorToGrantedFields(
+                jsonFieldSelector,
+                preDefinedExtraFieldsReadGrant,
+                dittoHeaders.getAuthorizationContext().getAuthorizationSubjectIds()
+        );
+        return preDefinedExtraFields.get(grantedReadJsonFieldSelector);
+    }
+
+    private static JsonFieldSelector filterAskedForFieldSelectorToGrantedFields(
+            final JsonFieldSelector jsonFieldSelector,
+            final JsonObject preDefinedExtraFieldsReadGrant,
+            final List<String> authorizationSubjectIds
+    ) {
+        final List<JsonValue> authSubjects = authorizationSubjectIds.stream().map(JsonValue::of).toList();
+        final JsonObject scopedPreDefinedExtraFieldsReadGrant = preDefinedExtraFieldsReadGrant.stream()
+                .filter(field -> field.getValue().asArray().stream().anyMatch(authSubjects::contains))
+                .collect(JsonCollectors.fieldsToObject());
+        final List<JsonPointer> allowedPointers = scopedPreDefinedExtraFieldsReadGrant.getKeys().stream()
+                .filter(key -> jsonFieldSelector.getPointers().stream()
+                        .anyMatch(p -> key.toString().startsWith(p.toString()))
+                )
+                .map(key -> JsonPointer.of(key.toString().substring(1)))
+                .toList();
+        return JsonFactory.newFieldSelector(allowedPointers);
     }
 
     protected CompletionStage<JsonObject> doRetrievePartialThing(final EntityId thingId,
@@ -365,11 +430,11 @@ public class DittoCachingSignalEnrichmentFacade implements CachingSignalEnrichme
     }
 
     private static <T> T getLast(final List<T> list) {
-        return list.get(list.size() - 1);
+        return list.getLast();
     }
 
     private static <T> T getFirst(final List<T> list) {
-        return list.get(0);
+        return list.getFirst();
     }
 
     private CompletionStage<JsonObject> handleNextExpectedThingEvents(final SignalEnrichmentCacheKey cacheKey,
